setup as api routes
